tests/negative/typecheck/annotation-not-ident.orng
fn main() -> Int {
    let const My_Type = (.a: Int | .b: Int | .c: Int)
    4
}